--- a/index.html
+++ b/index.html
@@ -93,18 +93,17 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>29 Oct 1996</span></li>
-                                    <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>Adicionar Website aqui</span></li> -->
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+351 916 659 180</span></li>
+
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's Degree</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lisbon, Portugal</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's Degree</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>salvador.frazao.quintas@gmail.com</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+351 916 659 180</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                                 </ul>
                             </div>
                         </div>
@@ -136,56 +135,62 @@
                     <div class="col-lg-6" data-aos="fade-up">
 
                         <div class="progress">
-                            <span class="skill">HTML <i class="val">100%</i></span>
+                            <span class="skill">HTML <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">CSS <i class="val">90%</i></span>
+                            <span class="skill">CSS <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+
+                        <div class="progress">
+                            <span class="skill">JavaScript <i class="val">65%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">JavaScript <i class="val">75%</i></span>
+                            <span class="skill">jQuery <i class="val">65%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Angular <i class="val">75%</i></span>
+                            <span class="skill">Bootstrap <i class="val">60%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+
+                        <div class="progress">
+                            <span class="skill">Angular <i class="val">30%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Typescript <i class="val">75%</i></span>
+                            <span class="skill">Typescript <i class="val">30%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
+
+
                         <div class="progress">
-                            <span class="skill">Bootstrap <i class="val">55%</i></span>
+                            <span class="skill">React <i class="val">20%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <span class="skill">mySQL <i class="val">90%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -194,55 +199,60 @@
                     </div>
 
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                        <div class="progress">
-                            <span class="skill">React <i class="val">75%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <span class="skill">PHP <i class="val">75%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
+
+
+
 
                         <div class="progress">
-                            <span class="skill">jQuery <i class="val">80%</i></span>
+                            <span class="skill">GIT <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">GIT <i class="val">80%</i></span>
+                            <span class="skill">Photoshop <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Photoshop <i class="val">80%</i></span>
+                            <span class="skill">WordPress/CMS <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">SEO <i class="val">80%</i></span>
+                            <span class="skill">SEO <i class="val">65%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Node <i class="val">80%</i></span>
+                            <span class="skill">Node <i class="val">20%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
 
+
+                        <div class="progress">
+                            <span class="skill">PHP <i class="val">20%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">mySQL <i class="val">20%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
 
 
 
@@ -339,8 +349,8 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/countdownChallenge.png" class="teste img-fluid rounded" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/countdownChallenge.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
-                                <a href="portfolio-details.html" title="Source Code"><i class="bi bi-code-slash"></i></a>
+                                <a href="https://squintas.github.io/Countdown-Challenge/" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <a href="https://github.com/squintas/Countdown-Challenge" target="_blank" title="Source Code"><i class="bi bi-code-slash"></i></a>
                             </div>
                         </div>
                     </div>
@@ -349,8 +359,8 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/blogr.png" class="teste img-fluid rounded" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/blogr.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
-                                <a href="portfolio-details.html" title="More Details"><i class="bi bi-code-slash"></i></a>
+                                <a href="https://squintas.github.io/Blogr/" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <a href="https://github.com/squintas/Blogr" target="_blank" title="More Details"><i class="bi bi-code-slash"></i></a>
                             </div>
                         </div>
                     </div>
@@ -359,7 +369,7 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/tindog.png" class="teste img-fluid rounded" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/tindog.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <a href="assets/img/portfolio/tindog.png" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
                                 <a href="portfolio-details.html" title="Source Code"><i class="bi bi-code-slash"></i></a>
                             </div>
                         </div>
@@ -370,8 +380,8 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/diceChallenge.png" class="img-fluid rounded" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/diceChallenge.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
-                                <a href="portfolio-details.html" title="More Details"><i class="bi bi-code-slash"></i></a>
+                                <a href="https://squintas.github.io/Dice-Game/index.html" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <a href="https://github.com/squintas/Dice-Game" target="_blank" title="Source Code"><i class="bi bi-code-slash"></i></a>
                             </div>
                         </div>
                     </div>
@@ -380,8 +390,8 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/cantinalx.png" class="img-fluid rounded" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/cantinalx.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
-                                <a href="portfolio-details.html" title="More Details"><i class="bi bi-code-slash"></i></a>
+                                <a href="http://www.cantinalx.com" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <!-- <a href="portfolio-details.html" target="_blank" title="Source Code"><i class="bi bi-code-slash"></i></a> -->
                             </div>
                         </div>
                     </div>
