--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's Degree</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lisbon, Portugal</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Work Abroad:</strong> <span>Available</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
@@ -105,6 +106,7 @@
                                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>salvador.frazao.quintas@gmail.com</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+351 916 659 180</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Remote Work:</strong> <span>Preferably</span></li>
                                 </ul>
                             </div>
                         </div>
@@ -189,9 +191,9 @@
 
 
                         <div class="progress">
-                            <span class="skill">React <i class="val">20%</i></span>
+                            <span class="skill">React <i class="val">15%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
