Portfolio project update

--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/tindog.png" class="teste img-fluid rounded" alt="">
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/tindog.png" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
-                                <a href="portfolio-details.html" title="Source Code"><i class="bi bi-code-slash"></i></a>
+                                <a href="https://squintas.github.io/Tindog/" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <a href="https://github.com/squintas/Tindog" target="_blank" title="Source Code"><i class="bi bi-code-slash"></i></a>
                             </div>
                         </div>
                     </div>
