--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
                     <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                     <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-                    <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+                    <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
                 </ul>
             </nav>
             <!-- .nav-menu -->
@@ -409,7 +409,7 @@
 
 
         <!-- ======= Contact Section ======= -->
-        <section id="contact" class="contact">
+        <!-- <section id="contact" class="contact">
             <div class="container">
 
                 <div class="section-title">
@@ -419,7 +419,7 @@
                 <div class="row" data-aos="fade-in">
 
                     <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                        <form action="contact.php" method="post" role="form" class="php-email-form">
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label for="name">Your Name</label>
@@ -427,7 +427,7 @@
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="email">Your Email</label>
-                                    <input type="email" class="form-control" name="email" id="email" required>
+                                    <input type="text" class="form-control" name="email" id="email" required>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -443,7 +443,7 @@
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-center"><button type="submit" name="submit">Send Message</button></div>
                         </form>
                     </div>
 
@@ -475,7 +475,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
         <!-- End Contact Section -->
 
     </main>
