--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's Degree</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lisbon, Portugal</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
+                                    <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li> -->
                                     <li><i class="bi bi-chevron-right"></i> <strong>Work Abroad:</strong> <span>Available</span></li>
                                 </ul>
                             </div>
@@ -106,7 +106,7 @@
                                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>salvador.frazao.quintas@gmail.com</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+351 916 659 180</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Remote Work:</strong> <span>Preferably</span></li>
+                                    <!-- <li><i class="bi bi-chevron-right"></i> <strong>Remote Work:</strong> <span>Preferably</span></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -138,38 +138,38 @@
                     <div class="col-lg-6" data-aos="fade-up">
 
                         <div class="progress">
-                            <span class="skill">HTML <i class="val">70%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress">
-                            <span class="skill">CSS <i class="val">70%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-
-                        <div class="progress">
-                            <span class="skill">JavaScript <i class="val">65%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress">
-                            <span class="skill">jQuery <i class="val">65%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress">
-                            <span class="skill">Bootstrap <i class="val">60%</i></span>
+                            <span class="skill">HTML <i class="val">60%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">CSS <i class="val">60%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+
+                        <div class="progress">
+                            <span class="skill">JavaScript <i class="val">50%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">jQuery <i class="val">50%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">Bootstrap <i class="val">40%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
