--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <!-- <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
             <h1>Salvador Quintas</h1>
             <p>I'm <span class="typed" data-typed-items="Developer, Freelancer"></span></p>
         </div>
-    </section>
+    </section> -->
     <!-- End Hero -->
 
     <main id="main">
@@ -203,16 +203,6 @@
 
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
-
-
-
-                        <div class="progress">
-                            <span class="skill">GIT <i class="val">70%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
                         <div class="progress">
                             <span class="skill">Photoshop <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
@@ -231,6 +221,13 @@
                             <span class="skill">SEO <i class="val">65%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">GIT <i class="val">40%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -340,6 +337,7 @@
                             <li data-filter="*" class="filter-active">All</li>
                             <li data-filter=".filter-htmlcss">HTML/CSS</li>
                             <li data-filter=".filter-javascript">Javascript</li>
+                            <li data-filter=".filter-react">React</li>
                             <li data-filter=".filter-angular">Angular</li>
                             <li data-filter=".filter-wordpress">Wordpress</li>
                         </ul>
@@ -348,6 +346,15 @@
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-react ">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/easybank.png" class="teste img-fluid rounded" alt="">
+                            <div class="portfolio-links">
+                                <a href="https://squintas.github.io/Easybank/" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <a href="https://github.com/squintas/Easybank/tree/master" target="_blank" title="Source Code"><i class="bi bi-code-slash"></i></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-javascript ">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/countdownChallenge.png" class="teste img-fluid rounded" alt="">
