Album project added to Portfolio

--- a/index.html
+++ b/index.html
@@ -348,6 +348,15 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-react ">
                         <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/albums.png" class="teste img-fluid rounded" alt="">
+                            <div class="portfolio-links">
+                                <a href="https://squintas.github.io/Albums/" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
+                                <a href="https://github.com/squintas/Albums/tree/master" target="_blank" title="Source Code"><i class="bi bi-code-slash"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-react ">
+                        <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/easybank.png" class="teste img-fluid rounded" alt="">
                             <div class="portfolio-links">
                                 <a href="https://squintas.github.io/Easybank/" target="_blank" title="Visit Website"><i class="bi bi-link-45deg"></i></a>
