--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-javascript ">
+                    <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-javascript ">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/countdownChallenge.png" class="teste img-fluid rounded" alt="">
                             <div class="portfolio-links">
@@ -372,7 +372,7 @@
                                 <a href="https://github.com/squintas/Countdown-Challenge" target="_blank" title="Source Code"><i class="bi bi-code-slash"></i></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
                         <div class="portfolio-wrap">
